# sylpheed-replyto

./: .gitignore  .travis.yml  COPYING  Makefile.am  NEWS  README.md  autogen.sh  build.sh  configure.ac
po/: POTFILES.in  ja.po  replyto.pot
res/: repeat_off.xpm  repeat_on.xpm  version.rc
src/: Makefile.am  replyto.c  replyto.h  ui.c
